# aichallenge2023-integ

./: .gitattributes  .gitignore  README.html  README.md  index.html  manifest.json  toc.html  toc.json
.github/workflows/: document.yml
FAQ/: index.html
autoware/: build.sh
autoware/aichallenge_ws/src/aichallenge_launch/launch/: aichallenge.launch.xml
autoware/aichallenge_ws/src/aichallenge_scoring/: CMakeLists.txt
autoware/aichallenge_ws/src/aichallenge_scoring/config/: aichallenge_scoring.param.yaml
autoware/aichallenge_ws/src/aichallenge_scoring/include/aichallenge_scoring/: total_duration_timer.hpp
autoware/aichallenge_ws/src/aichallenge_scoring/src/: aichallenge_scoring.cpp
autoware/aichallenge_ws/src/aichallenge_scoring_msgs/: CMakeLists.txt
autoware/aichallenge_ws/src/aichallenge_scoring_result/: CMakeLists.txt
autoware/mapfile/: lanelet2_map.osm  pointcloud_map.pcd
customize/: index.html  toc.html  toc.json
docker/: Dockerfile  build.sh  create_submit_tar.sh  run_container.sh
docker/aichallenge/: build.sh  run.sh
docker/aichallenge/aichallenge_ws/src/aichallenge_scoring/: README.md  package.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_scoring/config/: aichallenge_scoring.param.yaml
docker/aichallenge/aichallenge_ws/src/aichallenge_scoring/include/aichallenge_scoring/: aichallenge_scoring.hpp
docker/aichallenge/aichallenge_ws/src/aichallenge_scoring/launch/: aichallenge_scoring.launch.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_scoring/src/: aichallenge_scoring.cpp
docker/aichallenge/aichallenge_ws/src/aichallenge_scoring_msgs/: package.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_scoring_result/: CMakeLists.txt  package.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_scoring_result/src/: scoring_result.cpp
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/self_driving_controller/: CMakeLists.txt  package.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/self_driving_controller/launch/: self_driving_controller.launch.xml
docker/aichallenge/aichallenge_ws/src/aichallenge_submit/self_driving_controller/src/: self_driving_controller.cpp  self_driving_controller.hpp
docker/evaluation/: Dockerfile  advance_preparations.sh  build.sh  main.bash  run_container.sh
documentation/: README.md  docfx.json  documentation_inner.md  make_docs.sh  toc.yml
documentation/_site/: README.html  index.html  manifest.json  toc.html  toc.json
documentation/_site/evaluation/: index.html  toc.html  toc.json
documentation/_site/intro/: index.html
documentation/_site/local/: index.html  toc.json
documentation/_site/other/: index.html
documentation/_site/rule/: index.html  toc.json
documentation/_site/setup/: index.html
documentation/api/: toc.yml
documentation/docfx_project/: docfx.json  index.md  toc.yml
documentation/docfx_project/FAQ/: index.md  toc.yaml
documentation/docfx_project/customize/: index.md  toc.yml
documentation/docfx_project/en/intro/: index.md
documentation/docfx_project/en/local/: index.md
documentation/docfx_project/en/other/: index.md  toc.yml
documentation/docfx_project/en/rule/: index.md  toc.yml
documentation/docfx_project/en/setup/: index.md  toc.yml
documentation/docfx_project/evaluation/: index.md
documentation/docfx_project/finals/: index.md  operation.md  rules.md
documentation/docfx_project/images/rule/: Thumbs.db
documentation/docfx_project/intro/: index.md  toc.yml
documentation/docfx_project/local/: index.md  toc.yml
documentation/docfx_project/online/: index.md  toc.yml
documentation/docfx_project/operation/: index.md  toc.yml
documentation/docfx_project/other/: index.md  toc.yml
documentation/docfx_project/rule/: index.md
documentation/docfx_project/setup/: index.md
documentation/docfx_project/teams/: index.md  toc.yml
documentation/docfx_project_en/: README.md  docfx.json  index.md  toc.yml
documentation/docfx_project_en/FAQ/: index.md
documentation/docfx_project_en/api/: index.md
documentation/docfx_project_en/customize/: index.md  toc.yml
documentation/docfx_project_en/en/: index.html  manifest.json  toc.json
documentation/docfx_project_en/en/intro/: index.html
documentation/docfx_project_en/en/local/: index.html
documentation/docfx_project_en/en/online/: index.html
documentation/docfx_project_en/en/other/: index.html  toc.html  toc.json
documentation/docfx_project_en/en/rule/: index.html
documentation/docfx_project_en/en/setup/: index.html
documentation/docfx_project_en/evaluation/: index.md
documentation/docfx_project_en/finals/: index.md  operation.md  rules.md  toc.yml
documentation/docfx_project_en/intro/: index.md
documentation/docfx_project_en/local/: index.md  toc.yml
documentation/docfx_project_en/online/: index.md
documentation/docfx_project_en/other/: index.md
documentation/docfx_project_en/rule/: index.md  toc.yml
documentation/docfx_project_en/setup/: index.md
documentation/docfx_project_en/teams/: index.md
documentation/evaluation/: toc.yml
documentation/local/: index.md
documentation/rule/: index.md
documentation/setup/: toc.yml
en/: README.html  index.html  manifest.json  toc.html  toc.json
en/FAQ/: index.html
en/customize/: index.html  toc.html  toc.json
en/evaluation/: index.html
en/finals/: index.html  operation.html  rules.html  toc.html  toc.json
en/intro/: index.html  toc.html  toc.json
en/local/: index.html  toc.html  toc.json
en/online/: index.html  toc.html
en/other/: index.html  toc.html  toc.json
en/rule/: index.html  toc.html  toc.json
en/setup/: index.html  toc.html
en/teams/: index.html  toc.html  toc.json
evaluation/: index.html
finals/: index.html  operation.html  rules.html  toc.html
intro/: index.html  toc.html  toc.json
local/: index.html  toc.html  toc.json
online/: index.html  toc.html  toc.json
operation/: index.html  toc.html  toc.json
other/: index.html  toc.html
rule/: index.html  toc.html
setup/: index.html  toc.html  toc.json
teams/: index.html  toc.html  toc.json
(+32 files in other folders)
