<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aichallenge_scoring</name>
  <version>0.0.1</version>
  <description>The aichallenge_scoring package is responsible for calculating participant scores for the AI Challenge.</description>
  <maintainer email="yu.asabe@tier4.jp">Yu Asabe</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <depend>autoware_auto_mapping_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>lanelet2_extension</depend>
  <depend>lanelet2_core</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>vehicle_info_util</depend>
  <depend>visualization_msgs</depend>
  <depend>aichallenge_scoring_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
