<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>self_driving_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eee009876@github.com">ree</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>autoware_auto_system_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
